Updated controller and service test cases to accommodate changes in request and response DTOs